--- a/assorted.html
+++ b/assorted.html
@@ -1,17 +1,17 @@
 <div class="assorted-gallery gallery">
-  <div>
-    <script type="text/javascript" >
-      var imgs = [
-        {media:{src: 'assorted/asr1.jpg', title: '<b>Portrait of a Horse, 2011</b><br /> Pencil and acrylic on canvas, 35x25'}},
-        {media:{src: 'assorted/asr2.jpg', title: '<b>Untitled #1, 2003</b><br /> Acrylic on canvas, 90x60'}},
-        {media:{src: 'assorted/asr3.jpg', title: '<b>Untitled #2, 2003</b><br /> Acrylic on canvas, 100x80'}},
-        {media:{src: 'assorted/asr4.jpg', title: '<b>Untitled #3, 2007</b><br /> Acrylic on canvas, 60x50'}},
-        {media:{src: 'assorted/asr5.jpg', title: '<b>Untitled, 2010</b><br /> Pencil and acrylic on canvas, 100x50'}},
-        {media:{src: 'assorted/asr6.jpg', title: '<b>Untitled, 2010</b><br /> pencil and acrylic on canvas, 100x50'}},
-        {media:{src: 'assorted/asr7.jpg', title: '<b>Forest, 2011</b><br /> Acrylic on canvas, 35x35'}},
-        {media:{src: 'assorted/asr8.jpg', title: '<b>Forest #2, 2011</b><br /> Acrylic on canvas, 35x35'}},
-  ]
-</script>
-<a href="#" id="gstart"><img src="./thumbs/works/other.jpg" alT="assorted" class="gstart"></a>
-</div>
+    <div>
+        <script type="text/javascript">
+            var imgs = [
+                {image: 'assorted/asr1.jpg', title: 'Portrait of a Horse, 2011', description: ' Pencil and acrylic on canvas, 35x25'},
+                {image: 'assorted/asr2.jpg', title: 'Untitled #1, 2003', description: ' Acrylic on canvas, 90x60'},
+                {image: 'assorted/asr3.jpg', title: 'Untitled #2, 2003', description: ' Acrylic on canvas, 100x80'},
+                {image: 'assorted/asr4.jpg', title: 'Untitled #3, 2007', description: ' Acrylic, charcoal and pencil on canvas, 60x50'},
+                {image: 'assorted/asr5.jpg', title: 'Untitled, 2010', description: ' Acrylic and  pencil on canvas, 100x50'},
+                {image: 'assorted/asr6.jpg', title: 'Untitled, 2010', description: ' Acrylic and pencil on canvas, 100x50'},
+                {image: 'assorted/asr7.jpg', title: 'Forest, 2011', description: ' Acrylic on canvas, 35x35'},
+                {image: 'assorted/asr8.jpg', title: 'Forest #2, 2011', description: ' Acrylic on canvas, 35x35'}
+            ]
+            site.runGalery();
+        </script>
+    </div>
 </div>
