--- a/home.html
+++ b/home.html
@@ -14,16 +14,16 @@
     <meta http-equiv="content-style-type" content="text/css"/>
     <meta http-equiv="expires" content="0"/>
     <link href="css/style.css" rel="stylesheet" type="text/css" media="screen"/>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jquery.quickflip.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery.fittext.js"></script>
     <script type="text/javascript" src="yoxview/yoxview-init.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
+      <script type="text/javascript" src="/js/galleria/galleria-1.2.9.min.js"></script>
   </head>
   <body>
     <div class="wrap">
       <div class="inner-wrap">
-        <h1><img src="css/logo.png" alt="Danna Eran-Shamir"/><span>Danna Eran-Shamir דנה ערן-שמיר</span></h1>
+        <h1><img src="css/logo1.png" alt="Danna Eran-Shamir"/><span>Danna Eran-Shamir דנה ערן-שמיר</span></h1>
         <div class="middle">
           <div class="side-menu-wrap">
             <ul class="side-menu menu">
@@ -35,14 +35,20 @@
                   <li><a class="assorted" href="/assorted.html">Assorted</a></li>
                 </ul>
               </li>
-              <li class="menu-about p-menu-item about"><a href="/about.html" class="about">About</a></li>
+              <li class="menu-about p-menu-item about"><a href="/about.html" class="about">About</a>
+                <ul class="email-link hidden">
+                    <li class="eml">
+                        <div class="mal"></div>
+                    </li>
+                </ul>
+              </li>
             </ul>
           </div>
           <div class="main">
             <ul class="image-menu">
-              <li class="thumb"><img src="thumbs/ol.jpg" alt="Outlines" /></li>
-              <li class="thumb"><img src="thumbs/asr.jpg" alt="Assorted" /></li>
-              <li class="thumb"><img src="thumbs/ys.jpg"  alt="Yellowstone" /></li>
+              <li class="thumb"><a class="yellowstone" href="/outlines.html"><img src="thumbs/ol.jpg" alt="Outlines" /></a></li>
+              <li class="thumb"><a class="assorted" href="/assorted.html"><img src="thumbs/asr.jpg" alt="Assorted" /></a></li>
+              <li class="thumb"><a class="yellowstone" href="/yellowstone.html"><img src="thumbs/ys.jpg"  alt="Yellowstone" /></a></li>
             </ul>
           </div>
         </div>
@@ -56,7 +62,7 @@
             <a class="addthis_button_email"></a>
             <a class="addthis_button_compact"></a>
           </div>
-          <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+          <script type="text/javascript">var addthis_config = {"data_track_addressbar":false};</script>
           <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-514326ff3063d277"></script>
           <!-- AddThis Button END -->
         </div>
