removed unused images

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
   <body>
     <div class="wrap">
       <div class="inner-wrap">
-        <h1><img src="css/logo1.png" alt="Danna Eran-Shamir"/><span>Danna Eran-Shamir דנה ערן-שמיר</span></h1>
+        <h1><img src="css/logo.png" alt="Danna Eran-Shamir"/><span>Danna Eran-Shamir דנה ערן-שמיר</span></h1>
         <div class="middle">
           <div class="side-menu-wrap">
             <ul class="side-menu menu">
